--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Terms & Conditions - HarDil</title>
+  <title>Terms & Conditions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,48 +13,24 @@
 </header>
 
 <main class="app">
+  <section class="card">
+    <p>
+      By using HarDil, you agree to the following terms:
+    </p>
 
-<section class="card">
-  <p>
-    By using HarDil, you agree to the following terms and conditions.
-  </p>
+    <ul>
+      <li>HarDil only redirects users to official third-party websites.</li>
+      <li>HarDil does not own, control, or modify any external service.</li>
+      <li>Users log in at their own discretion on third-party websites.</li>
+      <li>No user data is stored or processed by HarDil.</li>
+      <li>HarDil is not responsible for content or services provided by external websites.</li>
+    </ul>
 
-  <h3>📌 Usage</h3>
-  <p>
-    HarDil is a redirection-based platform.
-    It does not provide services directly and does not host third-party content.
-  </p>
-
-  <h3>🚫 Restrictions</h3>
-  <p>
-    HarDil does not promote betting, gambling,
-    illegal services, or restricted applications.
-  </p>
-
-  <h3>💳 Payments</h3>
-  <p>
-    Digital payment services are intentionally excluded
-    to avoid security and financial risks.
-  </p>
-
-  <h3>⚠️ Liability</h3>
-  <p>
-    HarDil is not responsible for issues arising
-    from third-party websites or services.
-  </p>
-
-  <h3>📩 Contact</h3>
-  <p>
-    For questions regarding terms:
-    <strong>aghari128@gmail.com</strong>
-  </p>
-</section>
-
+    <p>
+      Use of HarDil is entirely voluntary and intended for convenience and awareness.
+    </p>
+  </section>
 </main>
-
-<footer class="footer">
-  HarDil · Terms & Responsibility
-</footer>
 
 </body>
 </html>
