--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - HarDil</title>
+  <title>Privacy Policy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,44 +13,24 @@
 </header>
 
 <main class="app">
+  <section class="card">
+    <p>
+      HarDil respects user privacy.
+    </p>
 
-<section class="card">
-  <p>
-    HarDil respects your privacy.
-    This application does not collect, store, or share any personal information.
-  </p>
+    <ul>
+      <li>No personal data is collected.</li>
+      <li>No login credentials are stored.</li>
+      <li>No analytics or tracking tools are used.</li>
+      <li>No cookies are created by HarDil.</li>
+    </ul>
 
-  <h3>🔐 Data Collection</h3>
-  <p>
-    HarDil does not collect user data, location data, cookies,
-    device information, or usage analytics.
-  </p>
-
-  <h3>🌐 Third-Party Websites</h3>
-  <p>
-    HarDil only redirects users to official third-party websites.
-    Any interaction, login, or data sharing happens directly
-    on those websites and is governed by their respective privacy policies.
-  </p>
-
-  <h3>🛡️ Security</h3>
-  <p>
-    We recommend using your default browser so login credentials
-    remain securely saved in your own browser account.
-  </p>
-
-  <h3>📩 Contact</h3>
-  <p>
-    For privacy-related questions, contact:
-    <strong>aghari128@gmail.com</strong>
-  </p>
-</section>
-
+    <p>
+      All logins and interactions occur directly on official third-party websites
+      through the user’s browser.
+    </p>
+  </section>
 </main>
-
-<footer class="footer">
-  HarDil · Privacy First
-</footer>
 
 </body>
 </html>
