--- a/legal.html
+++ b/legal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Legal Disclaimer - HarDil</title>
+  <title>Legal & Disclaimer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,40 +13,30 @@
 </header>
 
 <main class="app">
+  <section class="card">
+    <p>
+      HarDil is an independent platform created for convenience and awareness.
+    </p>
 
-<section class="card">
-  <p>
-    HarDil is an independent application and is not affiliated,
-    endorsed, or sponsored by any third-party services listed in the app.
-  </p>
+    <p>
+      All trademarks, logos, and brand names belong to their respective owners.
+      HarDil does not claim ownership of any third-party service.
+    </p>
 
-  <p>
-    All logos, trademarks, and brand names belong to their respective owners.
-  </p>
+    <p>
+      Betting, gambling, and digital payment platforms are intentionally excluded
+      to protect users from financial and security risks.
+    </p>
 
-  <p>
-    HarDil functions only as a directory and redirection platform.
-    Users access third-party services at their own discretion.
-  </p>
+    <p>
+      HarDil is a redirect-only platform and does not interfere with external services.
+    </p>
 
-  <h3>⚖️ Compliance</h3>
-  <p>
-    HarDil operates within legal boundaries
-    and is designed to be family-friendly and responsible.
-  </p>
-
-  <h3>📩 Contact</h3>
-  <p>
-    Legal inquiries:
-    <strong>aghari128@gmail.com</strong>
-  </p>
-</section>
-
+    <p>
+      <strong>App rights belong exclusively to Hari & Dileep.</strong>
+    </p>
+  </section>
 </main>
-
-<footer class="footer">
-  HarDil · Legal Transparency
-</footer>
 
 </body>
 </html>
