--- a/motive .html
+++ b/motive .html
@@ -25,9 +25,10 @@
     </p>
 
     <p>
-      HarDil does not track users, does not store login credentials, and does not
-      collect personal information. Users are encouraged to use their default
-      browser so login details remain safely stored on their own device.
+      HarDil does not track users, does not store login credentials, 
+      and does notcollect personal information. 
+      Users are encouraged to use their default browser so login details
+      remain safely stored on their own device.
     </p>
 
     <p>
