--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
 
 <header class="top-app-bar">
   <span class="top-app-title">❤️ HarDil</span>
+
+  <nav class="top-actions">
+    <a href="about.html">About</a>
+    <a href="motive.html">Motive</a>
+    <a href="legal.html">Legal</a>
+  </nav>
+
   <span class="menu-icon" id="openMenu">☰</span>
 </header>
+
 
 <!-- DRAWER -->
 <aside class="drawer" id="drawer">
@@ -48,11 +56,6 @@
     <a href="#health">🩺 Health</a>
     <a href="#sports">🏏 Sports</a>
     <a href="#learning">🧠 Learning</a>
-    <h4>About</h4>
-    <a href="about.html">About HarDil</a>
-    <a href="privacy.html">Privacy Policy</a>
-    <a href="terms.html">Terms & Conditions</a>
-    <a href="legal.html">Legal</a>
 
     <h4>Support</h4>
     <a href="mailto:aghari128@gmail.com">Contact</a>
