--- a/index.html
+++ b/index.html
@@ -272,6 +272,23 @@
     <div class="app-btn" data-url="https://coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
     <div class="app-btn" data-url="https://udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
     <div class="app-btn" data-url="https://khanacademy.org"><img src="assets/icons/khanacademy.png"><span>Khan Academy</span></div>
+    <div class="app-btn" data-url="https://www.nptel.ac.in">
+      <img src="assets/icons/nptel.png"><span>NPTEL</span>
+    </div>
+     <div class="app-btn" data-url="https://www.skillshare.com">
+      <img src="assets/icons/skillshare.png"><span>Skillshare</span>
+    </div>
+     <div class="app-btn" data-url="https://unacademy.com">
+      <img src="assets/icons/unacademy.png"><span>Unacademy</span>
+    </div>
+    <div class="app-btn" data-url="https://www.edx.org">
+      <img src="assets/icons/edx.png"><span>edX</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.udacity.com">
+      <img src="assets/icons/udacity.png"><span>Udacity</span>
+    </div>
+ 
   </div>
 </section>
 
