--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
 </head>
 
 <body>
-
 <header class="top-app-bar">
   <span class="top-app-title">❤️ HarDil</span>
-
   <nav class="top-actions">
     <a href="about.html">About</a>
     <a href="motive.html">Motive</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
     <a href="legal.html">Legal</a>
   </nav>
-
   <span class="menu-icon" id="openMenu">☰</span>
 </header>
-
 
 <!-- DRAWER -->
 <aside class="drawer" id="drawer">
