--- a/splash.html
+++ b/splash.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>HarDil</title>
+<title>HarDil Splash</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <style>
-/* ========= RESET ========= */
+/* ================= RESET ================= */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter", system-ui, sans-serif;
+  font-family: "Inter", system-ui, -apple-system, sans-serif;
 }
 
 body {
@@ -21,11 +21,11 @@ body {
   background: #000;
 }
 
-/* ========= BACKGROUND ========= */
+/* ================= BACKGROUND ================= */
 .splash-bg {
   position: fixed;
   inset: 0;
-  background: url("assets/images/splash-bg.jpg") center / cover no-repeat;
+  background: radial-gradient(circle at top, #1b1f3b, #05060d);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,19 +36,19 @@ body {
   inset: 0;
   background: radial-gradient(
     circle at center,
-    rgba(0,0,0,0.15),
-    rgba(0,0,0,0.75)
+    rgba(0,0,0,0.2),
+    rgba(0,0,0,0.85)
   );
 }
 
-/* ========= CENTER ========= */
+/* ================= CENTER ================= */
 .center {
   position: relative;
   width: 320px;
   height: 320px;
 }
 
-/* ========= LOGO ========= */
+/* ================= LOGO ================= */
 .logo-wrap {
   position: absolute;
   inset: 0;
@@ -60,84 +60,87 @@ body {
 }
 
 .logo {
-  font-size: 9.2rem;
+  font-size: 8.6rem;
   font-weight: 900;
   letter-spacing: 6px;
   color: #ffffff;
-  text-shadow:
-    0 0 25px rgba(236,72,153,0.9),
-    0 0 55px rgba(236,72,153,0.75),
-    0 0 95px rgba(236,72,153,0.55);
   opacity: 0;
   transform: scale(0.45);
+  text-shadow:
+    0 0 22px rgba(236,72,153,0.9),
+    0 0 52px rgba(236,72,153,0.6),
+    0 0 95px rgba(236,72,153,0.4);
   animation: logoReveal 1.4s ease forwards;
-  animation-delay: 1.2s;
+  animation-delay: 1.1s;
 }
 
 .tagline {
-  margin-top: 20px;
-  font-size: 1.75rem;
+  margin-top: 14px;
+  font-size: 1.35rem;
   font-weight: 600;
   color: #ffffff;
-  text-align: center;
-  text-shadow:
-    0 0 16px rgba(236,72,153,0.85),
-    0 0 40px rgba(236,72,153,0.65),
-    0 0 70px rgba(236,72,153,0.45);
   opacity: 0;
+  text-align: center;
   animation: fadeUp 1s ease forwards;
-  animation-delay: 2.6s;
+  animation-delay: 2.5s;
 }
 
-/* ========= ICON ORBITS (CORRECT FIX) ========= */
+/* ================= ICON ORBITS ================= */
+/* Whole ring rotates */
 .orbits {
   position: absolute;
   inset: 0;
   opacity: 0;
-  animation: showIcons 0.8s ease forwards;
-  animation-delay: 3.2s;
+  animation:
+    showIcons 0.8s ease forwards 3.1s,
+    orbitSpin 18s linear infinite 3.1s;
 }
 
-/* static angular position */
+/* 9 icons → 360 / 9 = 40deg */
 .orbit {
   position: absolute;
   inset: 0;
-  transform: rotate(calc(var(--i) * 45deg)); /* 360 / 8 */
+  transform: rotate(calc(var(--i) * 40deg));
 }
 
-/* animated circular motion */
+/* Icons stay upright */
 .icon {
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: 2.9rem;
-  transform: translate(190px, -50%);
-  animation: spin 6s linear infinite;
+  transform: translate(185px, -50%);
+  font-size: 2.6rem;
   color: #ffffff;
   text-shadow:
-    0 0 14px rgba(236,72,153,0.9),
-    0 0 34px rgba(236,72,153,0.65);
+    0 0 12px rgba(236,72,153,0.9),
+    0 0 30px rgba(236,72,153,0.6);
+  animation: counterSpin 18s linear infinite 3.1s;
 }
 
-/* ========= ANIMATIONS ========= */
+/* ================= ANIMATIONS ================= */
 @keyframes logoReveal {
   0%   { opacity: 0; transform: scale(0.45); }
-  70%  { opacity: 1; transform: scale(1.1); }
+  70%  { opacity: 1; transform: scale(1.08); }
   100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes fadeUp {
   from { opacity: 0; transform: translateY(14px); }
-  to { opacity: 1; transform: translateY(0); }
+  to   { opacity: 1; transform: translateY(0); }
 }
 
 @keyframes showIcons {
   to { opacity: 1; }
 }
 
-@keyframes spin {
-  from { transform: translate(190px, -50%) rotate(0deg); }
-  to   { transform: translate(190px, -50%) rotate(360deg); }
+@keyframes orbitSpin {
+  from { transform: rotate(0deg); }
+  to   { transform: rotate(360deg); }
+}
+
+@keyframes counterSpin {
+  from { transform: translate(185px, -50%) rotate(0deg); }
+  to   { transform: translate(185px, -50%) rotate(-360deg); }
 }
 </style>
 </head>
@@ -149,7 +152,7 @@ body {
 
   <div class="center">
 
-    <!-- ICON ORBITS -->
+    <!-- ICON RING -->
     <div class="orbits">
       <div class="orbit" style="--i:0"><span class="icon">🌐</span></div>
       <div class="orbit" style="--i:1"><span class="icon">💼</span></div>
@@ -158,7 +161,8 @@ body {
       <div class="orbit" style="--i:4"><span class="icon">🩺</span></div>
       <div class="orbit" style="--i:5"><span class="icon">🏏</span></div>
       <div class="orbit" style="--i:6"><span class="icon">🧠</span></div>
-      <div class="orbit" style="--i:7"><span class="icon">🍔</span></div>
+      <div class="orbit" style="--i:7"><span class="icon">🛒</span></div>
+      <div class="orbit" style="--i:8"><span class="icon">🍔</span></div>
     </div>
 
     <!-- LOGO -->
@@ -171,12 +175,14 @@ body {
 </div>
 
 <script>
+/* Gentle pause before exit */
 setTimeout(() => {
-  document.querySelectorAll(".icon").forEach(i => {
-    i.style.animationPlayState = "paused";
+  document.querySelectorAll(".orbits, .icon").forEach(el => {
+    el.style.animationPlayState = "paused";
   });
-}, 9200);
+}, 9000);
 
+/* Go to main app */
 setTimeout(() => {
   sessionStorage.setItem("harDilSplash", "done");
   window.location.replace("index.html");
