--- a/splash.html
+++ b/splash.html
@@ -198,6 +198,7 @@ setTimeout(() => {
 
 /* ✅ 5.5s → redirect */
 setTimeout(() => {
+  sessionStorage.setItem("harDilSplash", "done");
   window.location.href = "index.html";
 }, 5500);
 </script>
